--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
 <!-- Mirrored from km-cloacker.web.app/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 25 May 2025 23:02:48 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
+  <!-- Default Statcounter code for keme https://kilo-metre.netlify.app/ -->
+<script type="text/javascript">
+var sc_project=13138722; 
+var sc_invisible=1; 
+var sc_security="366274ec"; 
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js" async></script>
+<noscript><div class="statcounter"><a title="Web Analytics"
+href="https://statcounter.com/" target="_blank"><img class="statcounter"
+src="https://c.statcounter.com/13138722/0/366274ec/1/" alt="Web Analytics"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+<!-- End of Statcounter Code -->
   
       <!--  ClickCease.com tracking-->
       <script type='text/javascript'>var script = document.createElement('script');
